--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
+.vscode/
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,matlab,octave,c++,xcode,macos,linux,windows,vscode,jetbrains+all,tex,latex
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks,matlab,octave,c++,xcode,macos,linux,windows,vscode,jetbrains+all,tex,latex
 
